<resources>
    <string name="app_name">Restaurant Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="our_orders">Our Orders</string>
    <string name="add_new_category">Add New Category</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="save">Save</string>
    <string name="add_new_item">Add New Item</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_normal_price">Enter Normal Price</string>
    <string name="enter_description">Enter Description</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="enter_offer_price">Enter Offer Price</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_week">Select Week</string>
    <string name="select_month">Select Month</string>
    <string name="year">Year</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="select_date">Select Date</string>
    <string name="ordered">Ordered</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="income">Income</string>
    <string name="details">Details</string>
    <string name="export">Export</string>
    <string name="deal_offer"><![CDATA[Deal & Offer]]></string>
    <string name="deleted">Deleted</string>
    <string name="loading">Loading</string>
    <string name="language">Language</string>
    <string name="email">E-mail</string>
    <string name="header">Header</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="items_name">Items name</string>
    <string name="order_id_348">Order id:348</string>
    <string name="delivery_view">Delivery View</string>
    <string name="completed_pickup">Completed Pickup</string>
    <string name="total_106_00">Total : $ 106:00</string>
    <string name="order_id">Order id:348</string>
    <string name="call">Call</string>
    <string name="payment_way">Payment Way : Cash</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="review">Review</string>
    <string name="coast">Cost</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="request">Request</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="phone_number">Phone number</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign In Now!</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username_or_e_mail">Username or e-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="dont_you_have_an_account">Dont you have an account?</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="english">English</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_email">Restaurant Email</string>
    <string name="restaurant_number">Restaurant Number</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="about_restaurant">About Restaurant</string>
    <string name="social_links">Social Links</string>
    <string name="navigate">Navigate</string>
    <string name="items">Items</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="subtotal_106_00">SubTotal : 106.00 $</string>
    <string name="delivery_fee_0_00">Delivery Fee : 0.00 $</string>
    <string name="service_tax">Service tax (20%) : 21.20 $</string>
    <string name="discount">Discount (20 %) : 21:20 $</string>
    <string name="total">Total : 106.00 $</string>
    <string name="order_status">Order Status: Order Delivered</string>
    <string name="today_at_12_33_am">Today at 12:33 AM</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="accept_order">Accept Order</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="add_category">Add Category</string>
    <string name="order_number">Order Number</string>
    <string name="online_order">Online Order</string>
    <string name="menu">Menu</string>
    <string name="support">Support</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_deal">Add Deal</string>
    <string name="french">French</string>
    <string name="home">Home</string>
    <string name="switch_to_user">Switch To User</string>
    <string name="profile">Profile</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="my_wallet">My Wallet</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="logout">logout</string>
    <string name="off">OFF</string>
    <string name="week">Week</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="new_rder">New Order</string>
    <string name="completed_order">Completed Order</string>
    <string name="in_progress_order">In Progress Order</string>



    <string-array name="array_order">
        <item>New</item>
        <item>Completed</item>
        <item>In Progress</item>
    </string-array>

    <string-array name="array_name">
        <item>Order Delivered</item>
        <item>Order Canceled</item>
    </string-array>

    <string-array name="array_category">
        <item>Select Category</item>
        <item>Mexican Food</item>
        <item>Chinese Food</item>
        <item>French Food</item>
    </string-array>

    <string-array name="array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string-array name="array_sup_category">
        <item>Select Sup Category</item>
        <item>Mexican Food</item>
        <item>Chinese Food</item>
        <item>French Food</item>
    </string-array>
</resources>
