<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".views.activity.NewOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1A515072"
            android:padding="@dimen/_10sdp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:id="@+id/user_photo"
                android:src="@drawable/support"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/user_photo"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="Mohamed Khaled"
                android:textStyle="bold"
                android:id="@+id/user_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/user_photo"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/today_at_12_33_am"
                android:textSize="@dimen/_8ssp"
                android:layout_below="@+id/user_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/order_id"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_black_24dp"
                android:layout_alignParentStart="true"
                android:id="@+id/call_image_id"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/call_image_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="+12345678910"
                android:layout_centerVertical="true"
                />

            <Button
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_25sdp"
                android:textColor="#515072"
                android:text="@string/call"
                android:onClick="call"
                android:textSize="@dimen/_9ssp"
                android:textAllCaps="false"
                android:background="@drawable/view_details_btn_bg"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_alignParentStart="true"
                android:id="@+id/map_image_id"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/map_image_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:text="3322 Sweetwater Springs Blvd"
                />

            <Button
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_25sdp"
                android:textColor="#515072"
                android:text="@string/navigate"
                android:onClick="navigate"
                android:textSize="@dimen/_9ssp"
                android:textAllCaps="false"
                android:background="@drawable/view_details_btn_bg"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="Hi, please pack green sauce in my order and please tell your delivery boy that he have to come on 2nd floor because im not at home"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1A515072"
            android:padding="@dimen/_8sdp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/items"
                android:textStyle="bold"
                android:id="@+id/item_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/quantity"
                android:textStyle="bold"
                android:layout_toStartOf="@+id/item_price"
                android:layout_marginEnd="@dimen/_30sdp"
                android:id="@+id/item_quantity"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/item_price"
                />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/items_recycler"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:scrollbars="none"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1A515072"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal_106_00"
                android:id="@+id/subtotal_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_fee_0_00"
                android:id="@+id/delivery_fee_id"
                android:layout_below="@+id/subtotal_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_tax"
                android:layout_below="@+id/delivery_fee_id"
                android:id="@+id/tax_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_below="@id/tax_id"
                android:id="@+id/discount_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textStyle="bold"
                android:layout_below="@+id/discount_id"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:textColor="#FFF"
                android:text="@string/accept_order"
                android:textAllCaps="false"
                android:id="@+id/accept_id"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/accept_order_btn_bg"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:onClick="cancel"
                android:text="@string/cancel_order"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/cancel_order_btn_bg"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
</layout>