<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".views.activity.AddNewItemActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/item_image"
        android:src="@drawable/ic_camera_alt_black_24dp"
        android:background="@drawable/new_order_item_bg"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_margin="@dimen/_5sdp"
        android:id="@+id/upload_image_id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_border"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/text_hint_color"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="text"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_item_name"
        android:textColorHint="@color/text_hint_color"
        />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/sign_in_border"
        android:textAlignment="center"
        android:entries="@array/array_category"
        />

    <Spinner
        android:id="@+id/sup_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/sign_in_border"
        android:textAlignment="center"
        android:entries="@array/array_sup_category"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_border"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/text_hint_color"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="number"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_normal_price"
        android:textColorHint="@color/text_hint_color"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_border"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/text_hint_color"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="number"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_offer_price"
        android:textColorHint="@color/text_hint_color"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_border"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/text_hint_color"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="textMultiLine"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_description"
        android:textColorHint="@color/text_hint_color"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:background="@drawable/add_category_btn_bg"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="#FFF" />

</LinearLayout>
    </ScrollView>
</layout>